# snake_game

./: .gitignore  README.md
include/: game.c  game.h
src/: CMakeLists.txt  game.c  main.c
src/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  snake
